--- a/style.css
+++ b/style.css
@@ -25,16 +25,120 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
+  display: block;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+header {
+  width: 100%;
+  max-width: 1920px;
+  height: 100vh;
+  max-height: 1080px;
+  gap: 10px;
+  background-image: url("./public/assets/iteration-1/home-banner.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  text-align: center;
+  
+  
 }
+
+
+
+h2 {
+  font-family: 'Satisfy', cursive;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 44.27px;
+  letter-spacing: 0;
+  text-align: center;
+  text-transform: lowercase;
+  color: #FDC913;
+  margin-top: 0;
+  margin-bottom: 0px;
+}
+
+h1 {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 300;
+  font-size: 86px;
+  line-height: 92px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+
+h1 span {
+  display: block; 
+}
+
+.button {
+  background: #FDC913;
+  border: none;
+  border-radius: 50px;
+  padding: 14px 63px;
+  font-family: 'Barlow', sans-serif;
+  font-weight: 600;            
+  font-size: 18px;
+  line-height: 56px;            
+  text-align: center;
+  color: #000;
+  margin-top: 30px;
+  cursor: pointer;
+  
+}
+
+section {
+  width: 100%;
+  justify-content: center; 
+  padding: 26 426 26 426; 
+  margin: 0 auto;
+}
+
+.icon-links {
+  display: flex;  
+  align-content: center;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  margin: 0 auto;
+  max-width: 1920px;
+  gap: 10px;
+  height: 94px;
+
+}
+
+.icon-links li a {
+  display: flex;
+  align-items: center;    
+  gap: 19px;             
+  text-decoration: none;
+  color: #fff;
+  margin:0;
+}
+
+/* simgeleri yayamadık abi */
+
+.icon-links li a img {
+  width: 42px;
+  height: 42px;
+  
+}
+
+.icon-links li a span {
+  font-family: Barlow, sans-serif;
+  font-size: 18px;
+  font-style: medium;
+  text-align: center;
+  color: #000;
+}
+
+
 
 #app {
   max-width: 1280px;
@@ -44,16 +148,83 @@ h1 {
 }
 
 .logo {
-  height: 6em;
+  
+  height: 50px;
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
+  margin-top: 56;
+
 }
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
 .logo.vanilla:hover {
   filter: drop-shadow(0 0 2em #f7df1eaa);
+}
+
+.siparis {
+  display: grid;
+  grid-template-columns: 1fr 1fr; 
+  gap: 10px;
+  max-width: 1000px;
+  max-height: 449px;
+  margin: 0 auto;
+  padding: 10px;
+}
+
+.item {
+  position: relative;
+  overflow: hidden;
+  border-radius: 16px;
+  width: 100%;
+  height: auto;
+}
+
+.item img {
+  width: 100%;
+  height: auto;       
+  object-fit: cover;  
+  display: block;
+  border-radius: 16px;
+}
+
+.sag {
+  display: grid;
+  grid-template-rows: auto auto;
+  gap: 10px;
+}
+
+
+.txt {
+  position: absolute;
+  inset: 0; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0,0,0,0.4); 
+  color: #fff;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.item:hover .overlay {
+  opacity: 1;
+}
+
+.txt h3 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.txt button {
+  background: #FDC913;
+  border: none;
+  border-radius: 50px;
+  padding: 10px 30px;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 .card {
