--- a/style.css
+++ b/style.css
@@ -1,268 +1,619 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
 
 body {
-  margin: 0;
-  display: block;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  background-color: #FAF7F2;
 }
+
 
 header {
   width: 100%;
-  max-width: 1920px;
-  height: 100vh;
-  max-height: 1080px;
-  gap: 10px;
-  background-image: url("./public/assets/iteration-1/home-banner.png");
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+ 
+}
+
+.header {
+  background-image: url('public/assets/iteration-1/home-banner.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  text-align: center;
-  
-  
-}
-
-
-
-h2 {
-  font-family: 'Satisfy', cursive;
-  font-weight: 400;
-  font-size: 32px;
-  line-height: 44.27px;
-  letter-spacing: 0;
-  text-align: center;
-  text-transform: lowercase;
-  color: #FDC913;
-  margin-top: 0;
-  margin-bottom: 0px;
-}
-
-h1 {
-  font-family: 'Roboto Condensed', sans-serif;
-  font-weight: 300;
-  font-size: 86px;
-  line-height: 92px;
-  text-align: center;
-  text-transform: uppercase;
-  color: #FFFFFF;
-  margin-top: 0;
-  margin-bottom: 10px;
-}
-
-h1 span {
-  display: block; 
-}
-
-.button {
-  background: #FDC913;
-  border: none;
-  border-radius: 50px;
-  padding: 14px 63px;
-  font-family: 'Barlow', sans-serif;
-  font-weight: 600;            
-  font-size: 18px;
-  line-height: 56px;            
-  text-align: center;
-  color: #000;
-  margin-top: 30px;
-  cursor: pointer;
-  
-}
-
-section {
-  width: 100%;
-  justify-content: center; 
-  padding: 26 426 26 426; 
-  margin: 0 auto;
-}
-
-.icon-links {
-  display: flex;  
-  align-content: center;
-  justify-content: space-between;
-  align-items: center;
-  list-style: none;
-  margin: 0 auto;
-  max-width: 1920px;
-  gap: 10px;
-  height: 94px;
-
-}
-
-.icon-links li a {
+  height: 1080px;
+  width: 1920px;
   display: flex;
-  align-items: center;    
-  gap: 19px;             
-  text-decoration: none;
-  color: #fff;
-  margin:0;
-}
-
-/* simgeleri yayamadık abi */
-
-.icon-links li a img {
-  width: 42px;
-  height: 42px;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 50px;
   
 }
 
-.icon-links li a span {
-  font-family: Barlow, sans-serif;
-  font-size: 18px;
-  font-style: medium;
-  text-align: center;
-  color: #000;
-}
 
-
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  
-  height: 50px;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-  margin-top: 56;
-
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
-
-.siparis {
-  display: grid;
-  grid-template-columns: 1fr 1fr; 
-  gap: 10px;
-  max-width: 1000px;
-  max-height: 449px;
-  margin: 0 auto;
-  padding: 10px;
-}
-
-.item {
-  position: relative;
-  overflow: hidden;
-  border-radius: 16px;
-  width: 100%;
-  height: auto;
-}
-
-.item img {
-  width: 100%;
-  height: auto;       
-  object-fit: cover;  
-  display: block;
-  border-radius: 16px;
-}
-
-.sag {
-  display: grid;
-  grid-template-rows: auto auto;
-  gap: 10px;
-}
-
-
-.txt {
-  position: absolute;
-  inset: 0; 
+.text {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: rgba(0,0,0,0.4); 
-  color: #fff;
-  opacity: 0;
-  transition: opacity 0.3s ease;
+  gap: 10px;
 }
 
-.item:hover .overlay {
-  opacity: 1;
+.alt-icons{
+  display: flex;
+  justify-content: center;
+  background-color: white;
+  width: 100%;
+  gap:10px;
+  margin: 0 auto;
+  max-width: 1920px;
 }
 
-.txt h3 {
-  font-size: 24px;
-  margin-bottom: 10px;
+.icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin: 26px 426px;
+  
+height: 94;
+gap: 10px;
+
+
 }
 
-.txt button {
-  background: #FDC913;
-  border: none;
-  border-radius: 50px;
-  padding: 10px 30px;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+.icons a {
+  text-decoration: none;
+  color: black;
+  font-family: 'Barlow', sans-serif;
+  font-size: 18px;
   font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  line-height: 32,5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.icons img {
+  width: 42px;
+  height: 42px;
+}
+
+h1{
+font-family: Roboto Condensed;
+font-weight: 300;
+font-style: Light;
+font-size: 86px;
+letter-spacing: 1.5px;
+text-align: center;
+margin:0; 
+color: white;
+
+}
+
+.header button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Barlow;
+font-weight: 600;
+font-size: 18px;
+line-height: 56px;
+text-align: center;
+width: 193.265625px;
+height: 56px;
+background-color: #FDC913;
+border-radius: 50px;
+border-style: none;
+}
+
+.header button a{
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+  color: black;
+}
+
+
+
+.header h4 {
+  display: flex;
+  justify-content: center;
+font-family: Satisfy;
+font-weight: 400;
+font-style: Regular;
+font-size: 32px;
+line-height: 44.27px;
+text-align: center;
+color:#FDC913;
+}
+.total {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+gap: 11px;
+margin: 0 auto;
+max-width: 1920px;
+
+  
+}
+
+.total button {
+  width: 138px;
+height: 48px;
+top: 203.75px;
+left: -10px;
+opacity: 1;
+border-radius: 50px;
+background-color: white;
+border-color: white;
+border-style: none;
+
+}
+
+.total button a{
+  color:red;
+  text-decoration: none;
+  font-family: Barlow;
+font-weight: 600;
+font-style: SemiBold;
+font-size: 14px;
+text-align: center;
+
+
+}
+
+.siparis-ver1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  background-image: url('public/assets/iteration-2/cta/kart-1.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 12px;
+  padding: 50px;
+   gap:9px;
+   margin-top: 100px;
+  max-width: 1920px;
+}
+
+
+.lezzetus{
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  margin:0;
+  width: 530px;
+  height: 350px;
+border-radius: 12px;
+gap:9px;
+
+  
+}
+.lezzetus h2{
+font-family: Quattrocento;
+font-weight: 700;
+font-style: Bold;
+font-size: 65px;
+ text-align: left;
+ color:white;
+ margin: 0;
+}
+
+.lezzetus h4 {
+  font-family: Barlow;
+font-weight: 600;
+font-style: SemiBold;
+font-size: 20px;
+color: white;
+
+}
+
+
+
+
+.siparis-ver2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 530px;
+  height: 350px;
+  gap: 9px;
+
+
+  
+  
+  
+}
+
+.hackhatlon {
+  display: flex;
+  flex-direction: column;
+  background-image:url("public/assets/iteration-2/cta/kart-2.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+ width: 530px;
+  height: 220px;
+  justify-content: space-between;
+  padding: 32px;
+  border-radius: 12px;
+}
+
+.hackhatlon h2 {
+  font-family: Barlow;
+font-weight: 600;
+font-size: 32px;
+line-height: 44.27px;
+color:white
+}
+
+.npm {
+  display: flex;
+  flex-direction: column;
+  background-image:url("public/assets/iteration-2/cta/kart-3.png") ;
+  background-size: cover;
+  background-repeat: no-repeat;
+   width: 530px;
+  height: 125px;
+  justify-content: space-between;
+  padding: 32px;
+  border-radius: 12px;
+
+}
+
+.sadece-yazi {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  
+}
+.sadece-yazi h4{
+font-family: Satisfy;
+font-weight: 400;
+font-size: 32px;
+line-height: 44.27px;
+color: red;
+margin-bottom: 0;
+
+}
+.sadece-yazi h3 {
+  margin: 10px;
+  font-family: Barlow;
+font-weight: 600;
+font-size: 42px;
+color: black;
+}
+.alt-butonlar {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  max-width: 1920px;  
+  height: 48px;
+  margin: 0 auto; 
+}
+
+.alt-butonlar button {
+  border-radius: 50px;
+background-color: white;
+border-color: white;
+border-style: none;
+text-align: center;
+gap:10px;
+padding: 10px;
+margin:10px;
+width: 150px;
+height: 55px;
+}
+.alt-butonlar img {
+  width: 42px;
+  height: 42px;
+}
+
+.alt-butonlar a{
+  display: flex;
+  text-align: center;
+  align-items: center;
+  text-decoration: none;
+  color:black;
+  gap:10px;
+}
+
+.gray button{  
+  
+  border-radius: 50px;
+background-color:#292929 ;
+border-color: white;
+border-style: none;
+text-align: center;
+gap:10px;
+padding: 10px;
+margin:10px;
+
+}
+
+.gray button a{
+   display: flex;
+  text-align: center;
+  align-items: center;
+  text-decoration: none;
+  gap: 10px;
+  color: white;
+}
+
+
+
+.kutu img {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 150px ;
+  height: 150px;
+
+}
+
+.kutu {
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+max-width: 1920px;
+margin: 0 auto;
+}
+.görsel {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  border-radius: 12px;
+  padding: 50px;
+  background-color: white;
+  height: 250px;
+  gap: 10px;
+  margin: 30px ;
+}
+
+.degerlendirme {
+  display: flex;
+  flex-direction: row;
+  gap: 50px;
+}
+
+.degerlendirme h5 {
+  font-family: Barlow;
+font-weight: 600;
+font-size: 16px;
+color:#1B1B1BB2;
+}
+.kutu h4 {
+  font-family: Barlow;
+font-weight: 600;
+font-size: 19px;
+
+}
+
+footer section{
+  display: flex;
+  flex-direction: row;
+  background-color: #1A1A1A;
+  max-width: 1920px;
+  height: 500px;
+  margin: 0 auto;
+  color: white;
+  padding: 0 300px;
+  justify-content: space-between;
+ align-items: center;
+}
+.info {
+  display: flex;
+  flex-direction: column;  
+  margin: 10px;
+  gap:10px;
+
+}
+.info p{
+ display: flex;
+ align-items: left;
+font-family: Barlow;
+font-weight: 400;
+font-size: 18px;
+line-height: 32.4px;
+justify-content: left;
+}
+
+footer h4 {
+  font-family: Barlow;
+font-weight: 500;
+font-style: Medium;
+font-size: 24px;
+padding-right: 50px;
+
+}
+.insta {
+  display: flex;
+  flex-direction: column;
+  gap:10px;
+}
+
+.görseller-footer{
+  display: grid;
+ grid-template-columns:repeat(3 ,1fr) ;
+ gap:10px;
+}
+
+.en-alt {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap:1000px;
+  padding: 20px;
+  background-color: #1A1A1A;
+  color: white;
+  border: 1px solid #FFFFFF26;
+}
+
+.menu {
+  gap:0;
+  padding:0;
+}
+.menu h5{
+font-family: Barlow;
+font-weight: 400;
+font-size: 18px;
+
+}
+
+
+ @media (max-width: 580px) {
+
+  header {
+    max-width: 580px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    margin: 0;
   }
-  a:hover {
-    color: #747bff;
+
+  .header {
+    max-width: 580px; 
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 35px 0 35px 35px;
   }
-  button {
-    background-color: #f9f9f9;
+
+  .alt-icons {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+     max-width: 580px; 
+    padding: 25px;
+  }
+
+  .icons {
+    justify-content: center;
+    align-items: center;
+    margin: 50px;
+    flex-wrap: wrap;
+    gap: 80px;
+  }
+
+  .total {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .siparis-ver1 {
+    width: 100%; max-width: 422px; 
+    height: 336px;
+    gap: 10px;
+    border-radius: 12px;
+    padding-top: 44px;
+    padding-right: 49px;
+    padding-bottom: 44px;
+    padding-left: 49px;
+  }
+
+  .hackhatlon {
+    width: 100%; max-width: 450px; 
+    height: 270px;
+    border-radius: 12px;
+  }
+
+  .npm {
+    width: 100%; max-width: 450px; 
+    height: 270px;
+    border-radius: 12px;
+  }
+
+  .sadece-yazi {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 150px 0 0 0;
+  }
+
+  .sadece-yazi h4 {
+    font-family: Satisfy;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 44.27px;
+    text-align: center;
+    vertical-align: middle;
+  }
+
+  .sadece-yazi h3 {
+    text-align: center;
+    font-family: Barlow;
+    font-weight: 600;
+    font-size: 42px;
+    line-height: 56.2px;
+    text-align: center;
+    vertical-align: middle;
+  }
+
+  .alt-butonlar {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 35px;
+    margin: 0 auto;
+  }
+
+  .kutu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 300px 0 0 0;
+  }
+
+  footer {
+    background-color: #1A1A1A;
+  }
+
+  footer section {
+    display: flex;
+    flex-direction: column;
+    background-color: #1A1A1A;
+     max-width: 580px; 
+    height: auto;
+    margin: 0;
+    color: white;
+    padding: 50px 0 50px 50px;
+    align-items: flex-start;
+  }
+
+  .en-alt {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 250px;
+    padding: 50px 0 50px 50px;
+    background-color: #1A1A1A;
+    color: white;
+    border: 1px solid #FFFFFF26;
+   max-width: 580px; 
   }
 }
